--- a/src/chrome_extension/manifest.json
+++ b/src/chrome_extension/manifest.json
@@ -7,6 +7,11 @@
     "48": "icon/48.png",
     "128": "icon/128.png"
   },
+  "browser_action": {
+      "default_icon": {
+          "19": "icon/19.png"
+      }
+  },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
