--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "japari-pedia",
   "version": "1.0.0",
   "description": "Welcome to youkoso japari-park!",
-  "main": "index.js",
-  "repository": {},
+  "keywords": ["chrome-extension", "kemono-friends"],
+  "repository": { "type": "git", "url": "https://github.com/miyaoka/japari-pedia" },
   "author": "Masaya Kazama",
   "license": "MIT",
   "scripts": {
@@ -45,7 +45,6 @@
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
     "uglify-js": "git://github.com/mishoo/UglifyJS2#harmony",
-    "uglifyjs-webpack-plugin": "^0.2.0",
     "url-loader": "^0.5.7",
     "webpack-dev-server": "^2.3.0"
   },
@@ -53,6 +52,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "fs-extra": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "uglifyjs-webpack-plugin": "^0.2.0",
     "webpack": "^2.2.1",
     "webpack-merge": "^2.6.1",
     "write-file-webpack-plugin": "^3.4.2"
