--- a/src/chrome_extension/manifest.json
+++ b/src/chrome_extension/manifest.json
@@ -8,9 +8,10 @@
     "128": "icon/128.png"
   },
   "browser_action": {
-      "default_icon": {
-          "19": "icon/19.png"
-      }
+    "default_icon": {
+      "19": "icon/19.png",
+      "38": "icon/38.png"
+    }
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
