--- a/src/chrome_extension/manifest.json
+++ b/src/chrome_extension/manifest.json
@@ -13,6 +13,13 @@
       "38": "icon/38.png"
     }
   },
+  "background": {
+    "scripts": [ "event.js" ],
+    "persistent": false
+  },
+  "permissions": [
+    "storage"
+  ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "content_scripts": [
     {
