--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "start": "yarn dev",
     "dev": "webpack-dev-server --config webpack/dev.config.babel.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.babel.js --display-error-details --color",
+    "prod": "yarn build && yarn zip",
+    "zip": "bestzip build/build.zip build/*",
     "lint": "yarn lint:js && yarn lint:css",
     "lint:fix": "yarn lint:js:fix && yarn lint:css:fix",
     "lint:js": "eslint src webpack",
@@ -33,6 +35,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
+    "bestzip": "^1.1.3",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
