--- a/src/chrome_extension/manifest.json
+++ b/src/chrome_extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "__MSG_extName__",
   "description": "__MSG_extDescription__",
-  "default_locale": "ja",
+  "default_locale": "en",
   "manifest_version": 2,
   "icons": {
     "16": "icon/16.png",
