--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "webpack-dev-server --config webpack/dev.config.babel.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.babel.js --display-error-details --color",
     "prod": "yarn build && yarn zip",
-    "zip": "bestzip build/build.zip build/*",
+    "zip": "bestzip build.zip build/",
     "lint": "yarn lint:js && yarn lint:css",
     "lint:fix": "yarn lint:js:fix && yarn lint:css:fix",
     "lint:js": "eslint .",
