--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "yarn dev",
     "dev": "webpack-dev-server --config webpack/dev.config.babel.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.babel.js --display-error-details --color",
-    "prod": "yarn build && yarn zip",
+    "prod": "yarn rimraf && yarn build && yarn zip",
+    "rimraf": "rimraf build.zip build/",
     "zip": "bestzip build.zip build/",
     "lint": "yarn lint:js && yarn lint:css",
     "lint:fix": "yarn lint:js:fix && yarn lint:css:fix",
