--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "uglifyjs-webpack-plugin": "^0.2.0",
     "webpack": "^2.2.1",
     "webpack-merge": "^2.6.1",
-    "write-file-webpack-plugin": "^3.4.2"
+    "write-file-webpack-plugin": "^3.4.2",
+    "yaml-loader": "^0.4.0"
   }
 }
